<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_principal">

    <fragment
        android:id="@+id/nav_principal"
        android:name="com.example.atm.ui.principal.PrincipalFragment"
        android:label="@string/menu_principal"
        tools:layout="@layout/fragment_principal" />

    <fragment
        android:id="@+id/nav_servicos"
        android:name="com.example.atm.ui.servicos.ServicosFragment"
        android:label="@string/menu_servicos"
        tools:layout="@layout/fragment_servicos" />
    <fragment
        android:id="@+id/nav_clientes"
        android:name="com.example.atm.ui.clientes.ClienteFragment"
        android:label="@string/menu_clientes"
        tools:layout="@layout/fragment_cliente" />

    <fragment
        android:id="@+id/nav_contato"
        android:name="com.example.atm.ui.contato.ContatoFragment"
        android:label="@string/menu_contato"
        tools:layout="@layout/fragment_contato" />

    <fragment
        android:id="@+id/nav_sobre"
        android:name="com.example.atm.ui.sobre.SobreFragment"
        android:label="@string/menu_sobre"
        tools:layout="@layout/fragment_sobre" />










</navigation>